@@ -4,6 +4,7 @@ Version next
 * Add configuration file
 * Optimization of setting of unmodified rule
 * New option --force-init for enforcing initial rules
+* Allow initialization using directory of initialization files
 * Some cleaning
 
 Version 2.3.1
